@@ -28,6 +28,9 @@ Library
 
 - Issue #18455: multiprocessing should not retry connect() with same socket.
 
+- Issue #18513: Fix behaviour of cmath.rect w.r.t. signed zeros on OS X 10.8 +
+  gcc.
+
 - Issue #18101: Tcl.split() now process Unicode strings nested in a tuple as it
   do with byte strings.
 
